--- a/index.html
+++ b/index.html
@@ -1367,6 +1367,12 @@
                         document.querySelector('.login-mobile').click()
                     
                         })
+                        let step3createAccBtn = document.querySelector('#step2-create-acc');
+                         step3createAccBtn.addEventListener('click', () => {
+                            document.querySelector('.create-acc-popup-container').style.display="none";
+                             document.querySelector('.sign-in-overlay').style.display="block"
+                         })
+
 
                         
                     </script>
