changes to rating after game, mostly

--- a/slot-details-pending.html
+++ b/slot-details-pending.html
@@ -259,7 +259,7 @@
                 </div>
             </div>
             <div class="go-to-chat-div">
-                <button class="go-to-chat-button">GO TO GROUP CHAT
+                <button class="go-to-chat-button" onclick="location.href='messages.html'">GO TO GROUP CHAT
                 </button>
             </div>
         </div>
