--- a/upcoming-games.html
+++ b/upcoming-games.html
@@ -250,7 +250,7 @@
                         </div>
                     </div>
                     <div class="go-to-chat">
-                    <a href="#">Go to chat</a>
+                    <a href="messages.html">Go to chat</a>
                     </div>
                 </div>
                 <div class="upcoming-court-history-court-paid players-confirmed">
@@ -268,8 +268,8 @@
                     <div class="go-to-chat">
                         <div>
                             <h4 class="price-dollars"><img src="icons/player_stamp.png" alt="">&#36;6.5</h4>
-                            <a href="#">Go to chat</a>
-                            <a href="#">Details</a>
+                            <a href="messages.html">Go to chat</a>
+                            <a href="slot-details-confirmed.html">Details</a>
                         </div>
                     </div>
                 </div>
@@ -289,8 +289,8 @@
                     <div class="go-to-chat">
                         <div>
                             <h4 class="price-dollars"><img src="icons/player_stamp.png" alt="">&#36;6.5</h4>
-                            <a href="#">Go to chat</a>
-                            <a href="#">Details</a>
+                            <a href="messages.html">Go to chat</a>
+                            <a href="slot-details-pending.html">Details</a>
                         </div>
                     </div>
                 </div>
