--- a/account-login-and-security.html
+++ b/account-login-and-security.html
@@ -85,27 +85,39 @@
             <span class="x-button exit-signin">x</span>
         </div>
     </div>
+    <div class="log-in-overlay">
+        <div class="log-in-content">
+            <div class="login-signup">
+                <form id="signin-form">
+                    <div>
+                        <label for="email">Email:</label>
+                        <input type="email" name="" id="emailLogin">
+                    </div>
+                    <div>
+                        <label for="password">Password:</label>
+                        <input type="password" name="" id="passLogin">
+                    </div>
+                    <input type="submit" value="Log in">;
+                </form>
+                
+            </div>
+            <span class="x-button">X</span>
+        </div>
+    </div>
     <div class="searching-overlay">
         <div class="pop-up-search">
             <h3>Searching...</h3>
         </div>
     </div>
     
-    <!--**************************************** HEADER AND NAVIGATION START ***********************************-->
-    <header class="header">
+     <!--**************************************** HEADER AND NAVIGATION START ***********************************-->
+     <header class="header">
         <div class="header-content">
             <img src="logo/logo-mobile.png" alt="logo"  onclick="location.href='index.html'" class="logo-mobile">
             <img src="logo/sslogo.png" alt="logo"  onclick="location.href='index.html'" class="logo-desktop">
             <nav class="header-nav nav-desktop">
-                <div class="login-signup">
-                            <form id="signin-form">
-                                <label for="email">Email:</label>
-                                <input type="email" name="" id="emailLogin">
-                                <label for="password">Password:</label>
-                                <input type="password" name="" id="passLogin">
-                                <input type="submit" value="Log in">
-                            </form>
-                            <p>Don't have an account? <span class="sign-up-header-btn">Sign up!</span></p>
+                <div class="login-signup-text">
+                            <p><span class="login-btn-header">Log in</span>/<span class="signup-btn-header">Sign up</span></p>
                 </div>
                 <div class="signed-in-content-nav">
                     <ul class="nav-content">
@@ -209,6 +221,7 @@
         </div>
     </header>
     <!--**************************************** HEADER AND NAVIGATION END ***********************************-->
+
     <!--**************************************** SETTINGS START ***********************************-->
     <section class="settings-container">
         <div class="settings-content">
@@ -232,9 +245,9 @@
             <div class="login-and-security">
                 <form action="">
                     <label for="name">Password</label>
-                    <span class="edit span-green">Change</span>
+                    <span class="edit span-green change-password">Change</span>
                     <br>
-                    <input type="password" name="" id="" placeholder="Type new password">
+                    <input type="password" name="" id="password-input" placeholder="Type new password" disabled>
                     <br>
                     <input type="submit" value="Save">
                 </form>
@@ -320,6 +333,20 @@
                      <!-- Custom Scripts -->
                      <script src="js/menu.js"></script>
                     <script src="js/main.js"></script>
+                    <script>
+                        let changePassBtn = document.querySelector('.change-password');
+                        changePassBtn.addEventListener('click', () => {
+                            changePassBtn.classList.toggle('span-orange');
+                            if(changePassBtn.classList.contains('span-orange')) {
+                                changePassBtn.innerHTML = 'Cancel';
+                                document.querySelector('#password-input').disabled = false;
+                            } else {
+                                changePassBtn.innerHTML = 'Change';
+                                document.querySelector('#password-input').value = '';
+                                document.querySelector('#password-input').disabled = true;
+                            }
+                        })
+                    </script>
                     <!-- Font Awesome  -->
 
                     <script src="js/all.min.js"></script>
