--- a/account-notifications.html
+++ b/account-notifications.html
@@ -84,6 +84,25 @@
             <span class="x-button exit-signin">x</span>
         </div>
     </div>
+    <div class="log-in-overlay">
+        <div class="log-in-content">
+            <div class="login-signup">
+                <form id="signin-form">
+                    <div>
+                        <label for="email">Email:</label>
+                        <input type="email" name="" id="emailLogin">
+                    </div>
+                    <div>
+                        <label for="password">Password:</label>
+                        <input type="password" name="" id="passLogin">
+                    </div>
+                    <input type="submit" value="Log in">;
+                </form>
+                
+            </div>
+            <span class="x-button">X</span>
+        </div>
+    </div>
     <div class="searching-overlay">
         <div class="pop-up-search">
             <h3>Searching...</h3>
@@ -96,15 +115,8 @@
             <img src="logo/logo-mobile.png" alt="logo"  onclick="location.href='index.html'" class="logo-mobile">
             <img src="logo/sslogo.png" alt="logo"  onclick="location.href='index.html'" class="logo-desktop">
             <nav class="header-nav nav-desktop">
-                <div class="login-signup">
-                            <form id="signin-form">
-                                <label for="email">Email:</label>
-                                <input type="email" name="" id="emailLogin">
-                                <label for="password">Password:</label>
-                                <input type="password" name="" id="passLogin">
-                                <input type="submit" value="Log in">
-                            </form>
-                            <p>Don't have an account? <span class="sign-up-header-btn">Sign up!</span></p>
+                <div class="login-signup-text">
+                            <p><span class="login-btn-header">Log in</span>/<span class="signup-btn-header">Sign up</span></p>
                 </div>
                 <div class="signed-in-content-nav">
                     <ul class="nav-content">
@@ -208,6 +220,7 @@
         </div>
     </header>
     <!--**************************************** HEADER AND NAVIGATION END ***********************************-->
+
     <!--**************************************** SETTINGS START ***********************************-->
     <section class="settings-container">
         <div class="settings-content">
