--- a/manage-slots.html
+++ b/manage-slots.html
@@ -354,7 +354,7 @@
                                 <span class="total">total = &#36;58</span>
                                 <p class="code"><span class="span-black">Code:</span>JGSMA7931XS</p>
                             </div>
-                            <button class="grey-button" onclick="location.href='index.html'">Message</button>
+                            <button class="grey-button" onclick="location.href='messages.html'">Message</button>
                         </div>
                     </div>
                     <div class="booked-slot-shrink">
@@ -379,7 +379,7 @@
                                 <span class="total">total = &#36;58</span>
                                 <p class="code"><span class="span-black">Code:</span>JGSMA7931XS</p>
                             </div>
-                            <button class="grey-button" onclick="location.href='index.html'">Message</button>
+                            <button class="grey-button" onclick="location.href='messages.html'">Message</button>
                         </div>
                     </div>
                     <div class="booked-slot-shrink">
@@ -404,7 +404,7 @@
                                 <span class="total">total = &#36;58</span>
                                 <p class="code"><span class="span-black">Code:</span>JGSMA7931XS</p>
                             </div>
-                            <button class="grey-button" onclick="location.href='index.html'">Message</button>
+                            <button class="grey-button" onclick="location.href='messages.html'">Message</button>
                         </div>
                     </div>
                     <div class="booked-slot-shrink">
@@ -429,7 +429,7 @@
                                 <span class="total">total = &#36;58</span>
                                 <p class="code"><span class="span-black">Code:</span>JGSMA7931XS</p>
                             </div>
-                            <button class="grey-button" onclick="location.href='index.html'">Message</button>
+                            <button class="grey-button" onclick="location.href='messages.html'">Message</button>
                         </div>
                     </div>
                 </div>
